@@ -1,3 +1,3 @@
-EBUILD xbmc-9999.ebuild 5365 RMD160 0f7b747de7452f228e16b0cd78f8215ab888e886 SHA1 f130349e48a12ee8235292c7f7d758ea9458618e SHA256 357aa18439b044e288ee469c540b95d3d81e886ade935f5c58e6b11c3334509d
-MISC ChangeLog 798 RMD160 d1909959411844d3b3f41e691464a853e2f716f4 SHA1 a637a37b95f4dffb5c875db20170f57c4a100a80 SHA256 e7cc52e6016e0c6000227ce5f9afbdaa585cda12cf786c030b170cbfcb5bea28
+EBUILD xbmc-9999.ebuild 5259 RMD160 0d47b45254e5f2472993f564b98549b1c667e834 SHA1 8723f995770b7662fa7e1c77fc4f7f325ccd45e0 SHA256 f3c2fa421c0b701df836a3123a2bca75628a075aa3f922842065ab76e325b5e3
+MISC ChangeLog 874 RMD160 74e2f38a8d4ee9102d4d621e59d76711d12e66e5 SHA1 8869b6349603fe116b0034a5e862908bd2bc7b7c SHA256 ec832f6803d81b64d846ab8ddc16a0a363009b146a3f8d9ef5e9916d9bd9caf6
 MISC metadata.xml 428 RMD160 7c574612c36f23ada4d514ab510f11d66ef145f2 SHA1 f51abb54b6b55ae40a4c65793ef10b701241f6ec SHA256 9f60b4f4bf1e21a7476ab24207acf258be27a7502a9bc7490eefb8f897884c06
